--- a/index.html
+++ b/index.html
@@ -249,7 +249,7 @@
                 </p>
             
             <h3>GANTT CHART</h3>
-                <img src="" alt="">
+                <img src="C:\Users\agkgg\OneDrive\Desktop\FYP Repo\FYP-24-S2-21\pictures\photo_2024-05-20_10-05-14.jpg" alt="Gantt Chart">
 
             <h3>WORK BREAKDOWN STRUCTURE</h3>
                 <img src="C:\Users\agkgg\OneDrive\Desktop\FYP Repo\FYP-24-S2-21\pictures\Screenshot 2024-05-19 171448.png" alt="WBS">  
