--- a/index.html
+++ b/index.html
@@ -238,7 +238,7 @@
                     
                 </p>
             <h3>SWOT</h3>
-                <img src="C:\Users\agkgg\OneDrive\Desktop\FYP Repo\FYP-24-S2-21\pictures\Screenshot 2024-05-19 170815.png" alt="SWOT PICTURE">
+                <img src="..\Screenshot 2024-05-19 170815.png" alt="SWOT PICTURE">
                 <p>
                     Based on the SWOT analysis, by applying the Diffie-Hellman based PSI protocol, it allows us to achieve greater privacy between parties in the healthcare industry, 
                     opens greater collaboration with other working industries that handle like-minded sensitive data, optimises efficiency in treatment and diagnostic with the greater 
@@ -249,10 +249,10 @@
                 </p>
             
             <h3>GANTT CHART</h3>
-                <img src="C:\Users\agkgg\OneDrive\Desktop\FYP Repo\FYP-24-S2-21\pictures\photo_2024-05-20_10-05-14.jpg" alt="Gantt Chart">
+                <img src="..\photo_2024-05-20_10-05-14.jpg" alt="Gantt Chart">
 
             <h3>WORK BREAKDOWN STRUCTURE</h3>
-                <img src="C:\Users\agkgg\OneDrive\Desktop\FYP Repo\FYP-24-S2-21\pictures\Screenshot 2024-05-19 171448.png" alt="WBS">  
+                <img src="..\Screenshot 2024-05-19 171448.png" alt="WBS">  
 
             <h3>What is Homomorphic Encryption?</h3>
 
